sort.dutchflag.DutchFlagAlgo.scala.error
Erreur de compilation :
DutchFlagAlgo:8: error: not found: value ver
    ver term = true
    ^DutchFlagAlgo:12: error: not found: value term
         term = false
         ^DutchFlagAlgo:17: error: not found: value term
    } while (term == false)
             ^